--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "framer-motion": "^7.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
