--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "client-wealth-tool",
+  "homepage": "http://wealth_tool.eireausman.com/",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5001",
-  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
@@ -19,7 +20,6 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
